traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:17: error: type mismatch;
 found   : Int
 required: String
      ecritMessage(cpt:String)
                   ^TraversalByColumn:21: error: not found: value j
    j=j+1
    ^